[package]
name = "imgchest"
description = "A strongly-typed client for the Kraken REST API"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/r4stl1n/imgchest-rs"
keywords = ["imgchest", "api", "client", "rest"]
authors = [""]

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[workspace]
resolver = "2"
members = [
    "imgchest",
    "imgchest-cli"
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
