[package]
name = "imgchest-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "imgchest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
imgchest = { version = "0.0.0", path = "../imgchest", features = [ "serde" ] }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0", features = ["download-to-path"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
