[package]
name = "imgchest-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "imgchest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
imgchest = { version = "0.0.0", path = "../imgchest" }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0", features = ["download-to-path"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
