[package]
name = "imgchest"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = { version = "1.20.2", default-features = false, features = ["std"] }
reqwest = { version = "0.12.9", features = [ "cookies", "http2", "json", "multipart", "stream" ], default-features = false }
serde = { version = "1.0.215", features = [ "derive" ]}
serde_json = "1.0.132"
scraper = { version = "0.21.0", default-features = false }
thiserror = "2.0.3"
tokio = "1.41.1"
time = { version = "0.3.36", features = [ "serde", "parsing", "formatting" ] }
tokio-util = "0.7.12"

[dev-dependencies]
tokio = { version = "1.41.1", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
